fixed spacings and font-size of table data

--- a/style.css
+++ b/style.css
@@ -39,7 +39,8 @@ th {
 
 td {
     border: 1px solid black;
-    padding: 8px;
+    padding: 18px;
+    text-align: center;
 }
 
 #images, 
